Fix layout issue

--- a/src/www/themes/CodendiBlack/css/style.css
+++ b/src/www/themes/CodendiBlack/css/style.css
@@ -381,7 +381,6 @@ td.artifact_spacer { width: 5%; }
 
 
 #level_1 ul {
-    width: 100%;
     height: 43px;
     background-image: url(../images/tabs/menu-bg.gif); 
     background-position:top left;
